--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="src/style.css" />
     <title>Recipe Generator</title>
   </head>
   <body>
     <h1>Find a simple recipe to up your cook-game!</h1>
-<script src="src/index.js"></script>  
-</body>
+    <footer>
+      This project was coded by
+      <a href="https://github.com/primrosemapombere" target="_blank"
+        >Primrose Mapombere</a
+      >
+      and is open sourced on
+      <a
+        href="https://github.com/primrosemapombere/recipe-generator-prim"
+        target="_blank"
+      >
+        github
+      </a>
+      and hosted on
+      <a
+        href="https://ubiquitous-hummingbird-d2a708.netlify.app/"
+        target="_blank"
+        >netlify.</a
+      >
+    </footer>
+    <script src="src/index.js"></script>
+  </body>
 </html>
