--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </a>
       and hosted on
       <a
-        href="https://ubiquitous-hummingbird-d2a708.netlify.app/"
+        href="https://recipe-generator-prim.netlify.app/"
         target="_blank"
         >netlify.</a
       >
