added form and basic html structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,37 @@
     <title>Recipe Generator</title>
   </head>
   <body>
-    <h1>Find a simple recipe to up your cook-game!</h1>
+    <header>
+      <h1>Find a simple recipe to up your cook-game!</h1>
+    </header>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          name=""
+          id=""
+          placeholder="Enter keywords for recipe"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+
+      <div>
+        The recipe comes here
+        <br />
+        The recipe comes here
+        <br />
+        The recipe comes here
+        <br />
+        The recipe comes here
+        <br />
+      </div>
+    </main>
+
+    <hr />
     <footer>
       This project was coded by
       <a href="https://github.com/primrosemapombere" target="_blank"
@@ -21,9 +51,7 @@
         github
       </a>
       and hosted on
-      <a
-        href="https://recipe-generator-prim.netlify.app/"
-        target="_blank"
+      <a href="https://recipe-generator-prim.netlify.app/" target="_blank"
         >netlify.</a
       >
     </footer>
