--- a/index.html
+++ b/index.html
@@ -7,54 +7,57 @@
     <title>Recipe Generator</title>
   </head>
   <body>
-    <header>
-      <h1>Find a simple recipe to up your cook-game!</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1>Find a simple recipe to up your cook-game!</h1>
+      </header>
 
-    <main>
-      <form>
-        <input
-          type="text"
-          name=""
-          id=""
-          placeholder="Enter keywords for recipe"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
+      <main>
+        <form id="type">
+          <input
+            type="text"
+            name=""
+            id=""
+            placeholder="Enter keywords for recipe"
+            autofocus
+            required
+            autocomplete="off"
+            class="prompt"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
 
-      <div>
-        The recipe comes here
-        <br />
-        The recipe comes here
-        <br />
-        The recipe comes here
-        <br />
-        The recipe comes here
-        <br />
-      </div>
-    </main>
+        <div class="recipe">
+          The recipe comes here
+          <br />
+          The recipe comes here
+          <br />
+          The recipe comes here
+          <br />
+          The recipe comes here
+          <br />
+        </div>
+      </main>
 
-    <hr />
-    <footer>
-      This project was coded by
-      <a href="https://github.com/primrosemapombere" target="_blank"
-        >Primrose Mapombere</a
-      >
-      and is open sourced on
-      <a
-        href="https://github.com/primrosemapombere/recipe-generator-prim"
-        target="_blank"
-      >
-        github
-      </a>
-      and hosted on
-      <a href="https://recipe-generator-prim.netlify.app/" target="_blank"
-        >netlify.</a
-      >
-    </footer>
+      <hr />
+      <footer>
+        This project was coded by
+        <a href="https://github.com/primrosemapombere" target="_blank"
+          >Primrose Mapombere</a
+        >
+        and is open sourced on
+        <a
+          href="https://github.com/primrosemapombere/recipe-generator-prim"
+          target="_blank"
+        >
+          github
+        </a>
+        and hosted on
+        <a href="https://recipe-generator-prim.netlify.app/" target="_blank"
+          >netlify.</a
+        >
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
