added API integration
added API integration

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Recipe Generator</title>
   </head>
@@ -28,16 +29,8 @@
           <input type="submit" class="submit-button" />
         </form>
 
-        <div class="recipe" id="recipe">
-          The recipe comes here
-          <br />
-          The recipe comes here
-          <br />
-          The recipe comes here
-          <br />
-          The recipe comes here
-          <br />
-        </div>
+        <div class="hint" i.e: Chicken, Rice, Chocolate Cake></div>
+        <div class="recipe hidden" id="recipe"></div>
       </main>
 
       <hr />
